// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/virtualized-table-renderers/fileNameCellRenderer should render a FileNameCell 1`] = `
<span
  className="bdl-FileNameCell"
  title="fancy.jpg"
>
  <FileIcon
    dimension={32}
    extension="jpg"
  />
  <Link
    className="bdl-FileNameCell-link"
    component="a"
    href="/file/123"
    rel="noopener noreferrer"
    target="_blank"
  >
    fancy.jpg
  </Link>
</span>
`;

exports[`features/virtualized-table-renderers/fileNameCellRenderer should render external file name when isExternal is true 1`] = `
<span
  className="bdl-FileNameCell"
  title={
    Object {
      "defaultMessage": "External File",
      "id": "boxui.features.VirtualizedTableRenderers.externalFile",
    }
  }
>
  <FileIcon
    dimension={32}
    extension="jpg"
  />
  <Link
    className="bdl-FileNameCell-link is-external"
    component="a"
    href="/file/123"
    rel="noopener noreferrer"
    target="_blank"
  >
    <Component />
  </Link>
</span>
`;
